# pikascript-core

./: .gitignore  BaseObj.c  BaseObj.h  CMakeLists.txt  MimiObj.c  PikaObj.c  PikaObj.h  README.md  SysObj.c  SysObj.h  TinyObj.c  TinyObj.h  build.sh  clear  clear.sh  dataArg.c  dataArg.h  dataArgs.c  dataArgs.h  dataLink.c  dataLink.h  dataLinkNode.c  dataLinkNode.h  dataMemory.c  dataMemory.h  make  make.sh  update  update.sh
build_bin/: CMakeCache.txt
config/vscode/: c.json.code-snippets
docker/: Dockerfile  README.md  build.sh  sources.list
include/: SH_sgui.h  VM_device_blueTeeth.h  VM_dht11_test.h  VM_lcd.h  VM_smoke.h  VM_socket.h  dataArgsConst.h  mimiPort_lamp.h  mimiSH_core.h  mimiStr.h  server.h  shApp_cmdNoFound.h  shApp_test.h  shDriver_VM_iot.h  test_PORT_strprint_linux.h  test_VM_device.h  test_args2.h
mimiApp/Inc/: allert.h  allertInfo.h  callback.h  goods.h  gui2.h  inductor.h  lamp.h  light.h  panel_lamp.h  server.h  timer.h
mimiApp/Src/: allert.c  allertInfo.c  callback.c  goods.c  gui2.c  inductor.c  lamp.c  light.c  panel_lamp.c  server.c  testClass.c  timer.c
mimiData/: dataArg.c  dataArg.h  dataArgs.c  dataArgs.h  dataLink.c  dataLink.h  dataLinkNode.c  dataLinkNode.h  dataLog.c  dataLog.h  dataMemory.c  dataMemory.h  dataString.c  dataString.h  dataStrs.c  strArgs.c  strArgs.h  strings.c  strings.h
mimiData/Inc/: dataArg.h  dataArgs.h  dataArgsConst.h  dataLink.h  dataLinkNode.h  dataLinkWithNode.h  dataList.h  dataMemory.h  dataString.h  dataTest.h
mimiData/Src/: dataArg.c  dataArgs.c  dataArgsConst.c  dataLink.c  dataLinkNode.c  dataLinkWithNode.c  dataList.c  dataLog.c  dataMemory.c  dataString.c  dataTest.c
mimiDevice/: deviceProcess.h  mimiCom.c  mimiCom.h  mimiDeviceCom.c  mimiDeviceCom.h
mimiEvent/: mimiEvent.c  mimiEvent.h  mimiFansInfo.c  mimiFansInfo.h  mimiFansList.c  mimiFansList.h  mimiMailbox.c  mimiMailbox.h
mimiLib/: CMakeLists.txt  build.sh  setSubCmakeLists.sh
mimiLib/include/: VM_com_test.h  light.h  mimiTest.h
mimiLib/mimiapp/inc/: callback.h  goods.h  key.h  lamp.h  panel_lamp.h
mimiLib/mimiapp/src/: key.c  lamp.c  panel_default.c  panel_lamp.c  panel_market.c
mimiLib/mimibuild/: core-distribute.sh  core-fast-distribute.sh  update.sh
mimiLib/mimidata/inc/: dataLog.h  dataQueue.h
mimiLib/mimidata/src/: dataLog.c
mimiLib/mimiport/inc/: PORT_inductor.h
mimiLib/mimiport/src/: PORT_adc.c  PORT_inductor.c  mimiPort_lamp.c
mimiLib/mimishell/src/: SH_sgui.c  mimiSH_config.c
mimiLib/mimitest/src/: test_timer.c
mimiLib/mimivm/inc/: VM_delay.h  VM_device.h  VM_device_voltage.h  VM_dht11.h  VM_socket_test.h
mimiLib/mimivm/src/: VM_delay.c  VM_device.c  VM_device_zigebee.c  mimiVM_core.c
mimiLib/src/mimidata/src/: test_dataQueue.c
mimiLib/src/mimimemory/src/: VM_memory.c
mimiLib/src/mimiport/src/: PORT_bh1750.c  mimiPort_market.c
mimiLib/src/mimishell/inc/: shDriver_uart.h
mimiLib/src/mimishell/src/: mimiSH_core.c  shApp_argv.c  shDriver_VM_iot.c  shDriver_uart.c
mimiLib/src/mimistr/src/: mimiStr.c
mimiLib/src/mimitest/src/: test_VM_args.c  test_mimiCore.cpp  test_solutions.cpp
mimiLib/src/mimivm/inc/: VM_device_zigbee.h  VM_iot.h  VM_lcd.h  VM_smoke.h  VM_terminal.h
mimiLib/src/mimivm/src/: VM_args.c  VM_dht11.c  VM_keyBoard_4key.c  VM_smoke.c  VM_socket.c  VM_socket_test.c
mimiLib/test2/: CMakeLists.txt
mimiLib/test2/add/: CMakeLists.txt  add.c  add.h
mimiLib/test2/example/: CMakeLists.txt  test_add.c  test_sub.c
mimiLib/test2/sub/: CMakeLists.txt  sub.c  sub.h
mimiObject/: BaseObj.c  BaseObj.h  MimiClass.c  MimiObj.c  MimiObj.h  SysObj.c  TinyObj.c  baseObj.c  baseObj.h  method.c  method.h  sysObj.c  sysObj.h
mimiPort/Inc/: mimiPort_lamp.h
mimiPort/Src/: mimiPort_lamp.c
mimiProcess/: MimiProcess.c  MimiProcess.h  mimiProcess.c  mimiProcess.h
mimiSH/: mimiShell.c  mimiShell.h  shApp_argSet.c  shApp_argSet.h  shApp_argv.c  shApp_argv.h  shApp_cmdNoFound.c  shApp_cmdNoFound.h  shApp_list.c  shApp_list.h  shApp_print.c  shApp_test.c  shApp_typeScript.c  shApp_typeScript.h
mimiSH/Inc/: SH_sgui.h  mimiSH_config.h  mimiSH_core.h  mimiShell.h  mimiShell2.h  shApp_argSet.h  shApp_argv.h  shApp_argv2.h  shApp_cmdNoFound.h  shApp_cmdNoFound2.h  shApp_list.h  shApp_print.h  shApp_set.h  shApp_test.h  shApp_test2.h
mimiSH/Src/: SH_sgui.c  mimiShell.c  mimiShell2.c  shApp_argSet.c  shApp_argv.c  shApp_argv2.c  shApp_cmdNoFound.c  shApp_cmdNoFound2.c  shApp_list.c  shApp_print.c  shApp_set.c  shApp_test.c  shApp_test2.c  shDriver_VM_iot.c
mimiServer/: .server2.c.swp  .server2.h.swp  mimiProcess.c  mimiProcess.h  server2.c  server2.h
mimiTest/: .test_server2.c.swp  dataTest.c  dataTest.h  mimiTest.cpp  mimiTest.h  test_MimiObj.c  test_MimiObj.h  test_VM_args.c  test_VM_args.h  test_VM_device.c  test_args.c  test_args.h  test_args2.c  test_dataLink.c  test_dataLog.c  test_event.c  test_event.h  test_link.c  test_link.h  test_link2.c  test_mimiCom.c  test_mimiCom.h  test_mimiCore.cpp  test_mimiCore.h  test_mimiProcess.c  test_mimiProcess.h  test_server.c  test_server2.c  test_server2.h  test_sysObj.c  test_sysObj.h  test_timer.c  test_timer.h
mimiTest/Inc/: test_dataLink.h  test_link2.h
mimiVM/Inc/: VM_device.h  VM_device_blueTeeth.h  VM_device_light.h  VM_device_voltage.h  VM_device_zigbee.h  VM_dht11.h  VM_iot.h  VM_socket.h  VM_terminal.h
mimiVM/Src/: VM_device.c  VM_device_blueTeeth.c  VM_device_light.c  VM_device_voltage.c  VM_device_zigebee.c  VM_dht11.c  VM_smoke.c  VM_socket.c  VM_socket_test.c  VM_terminal.c  mimiVM_core.c
mimiapp/inc/: inductor.h  market_case1.h  panel_default.h  panel_market.h
mimiapp/src/: callback.c  inductor.c  light.c  market_case1.c
mimibuild/: build.sh  clear.sh  core-release.sh  core-update.sh  git_add.sh  run.sh
mimidata/inc/: dataLink.h
mimidata/src/: test_dataLink.c
mimiport/inc/: mimiPort_lamp.h
setup/subCmake/: .CMakeLists.txt.swp  CMakeLists.txt
setup/subCmake_bin/: .CMakeLists.txt.swo  .CMakeLists.txt.swp  CMakeLists.txt  domake.sh
src/init/: main.c
src/init/linux/: CMakeLists.txt  main.c
subMake/: make_bin.sh
(+167 files in other folders)
